--- a/example/mr24hpc1.yaml
+++ b/example/mr24hpc1.yaml
@@ -93,3 +93,24 @@ button:
     restart:
       name: "Module Restart"
 
+select:
+  - platform: seeed_mr24hpc1
+    scene_mode:
+      name: "Scene"
+    existence_boundary:
+      name: "Existence Boundary"
+    motion_boundary:
+      name: "Motion Boundary"
+
+number:
+  - platform: seeed_mr24hpc1
+    sensitivity:
+      name: "Sensitivity"
+    existence_threshold:
+      name: "Existence Energy Threshold"
+    motion_threshold:
+      name: "Motion Energy Threshold"
+    motion_trigger:
+      name: "Motion Trigger Time"
+    motion_to_rest:
+      name: "Motion To Rest Time"
