--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   build-firmware:
     name: Build Firmware
-    uses: .github/workflows/esphome_build.yaml@main
+    uses: ./.github/workflows/esphome_build.yaml@main
     with:
       files: example/mr24hpc1.yaml
       esphome-version: 2026.1.3
