--- a/example/mr24hpc1.yaml
+++ b/example/mr24hpc1.yaml
@@ -20,6 +20,10 @@ esphome:
 #      ref: main
 #    refresh: 0s
 
+external_components:
+  - source:
+      path: /components
+
 esp32:
   board: esp32-c3-devkitm-1
   variant: esp32c3
