--- a/example/mr24hpc1.yaml
+++ b/example/mr24hpc1.yaml
@@ -23,7 +23,7 @@ esphome:
 external_components:
   - source:
       type: local
-      path: components
+      path: static/components
 
 esp32:
   board: esp32-c3-devkitm-1
