--- a/.github/workflows/esphome_build.yaml
+++ b/.github/workflows/esphome_build.yaml
@@ -84,6 +84,8 @@ jobs:
       - name: Replace project version
         run: |
           sed -i "s/version: dev/version: ${{ needs.prepare.outputs.version }}/g" ${{ matrix.file }}
+      - name: List files
+        run: ls -l
       - name: Build Firmware
         uses: esphome/build-action@f93bda46d83c761cd25bbfdf350cfe508a0a39d5 # v7.1.0
         id: esphome-build
